tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__TimetoKillKobold-AAAAAAAAAAAAAAAAAAALGQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2841,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Kobolds can often be found in Hollow Hills. They will spawn almost anywhere that is dark within the Twilight Forest dimension and tend to spawn in large groups.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time to Kill (Kobold)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 432000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
